--- a/x8.html
+++ b/x8.html
@@ -12,7 +12,7 @@
 
     <img src="images/pp.jpg" alt="강아지">
      <h2>김구는 남한만의</h2>
-     <p>임시정부를 수립하자 주장했고 이승만은 단독 정부 수립을 반대하였다./p>
+     <p>임시정부를 수립하자 주장했고 이승만은 단독 정부 수립을 반대하였다./<p>
 
      <ol>
        <li><a href="y8.html">O</li>
